Queue back-up store now uses localforage

--- a/WebInterface/Audio/index.html
+++ b/WebInterface/Audio/index.html
@@ -124,6 +124,7 @@
 		}
 	</style>
 
+	<script type="text/javascript" src="localforage.min.js"></script>
 	<script type="text/javascript" src="mediaHandler.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 
@@ -153,6 +154,7 @@
 
 	<div id="songContextMenu" class="context-menu">
 		<button onclick="contextMenuClick(this, 'playNext')">Play next</button>
+		<button onclick="contextMenuClick(this, 'editTags')">Edit tags</button>
 		<button style="display: none" onclick="contextMenuClick(this, 'removeDownload')">Remove download</button>
 	</div>
 	<div id="playlistContextMenu" class="context-menu">
