--- a/WebInterface/help.html
+++ b/WebInterface/help.html
@@ -226,7 +226,7 @@
 					<li><b>Esc:</b> Stop song</li>
 					<li><b>Enter/Space:</b> Play/pause song</li>
 					<li><b>Right Arrow:</b> Next song</li>
-					<li><b>Left Arrow:</b> Pervious song</li>
+					<li><b>Left Arrow:</b> Previous song</li>
 					<li><b>Double click on song:</b> Add to queue and play</li>
 					<li><b>CTRL + click on song:</b> Add to the queue directly after the current song</li>
 					<li><b>CTRL + click on playlist:</b> Edit playlist</li>
